Spotify with infinite scrolling

--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
       <h1>Spotify Search</h1>
       <form>
         <input type="text" placeholder="Please enter artist" />
+        <select>
+          <option value="artist">Artist</option>
+          <option value="album">Album</option>
+        </select>
         <button>Go</button>
       </form>
     </header>
 
     <section></section>
+    <footer><p>&copy &nbsp;&nbsp;Joseph Urbina &nbsp;&nbsp;2019</p></footer>
 
     <script src="main.js"></script>
   </body>
